<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VehicleManagement</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_create_excel_sheet">Create Excel Sheet</string>
    <string name="action_share_excel_sheet">Share Excel Sheet</string>
    <string name="loginHeadingText">Vehicle Management</string>
    <string name="poweredBy">Powered by: DP Automation</string>
    <string name="shareIt">Share Sheet</string>
    <string name="enterUsername">Enter Username</string>
    <string name="enterPassword">Enter Password</string>
    <string name="enterLogin">Login</string>
    <string name="enterDriver">Enter Driver</string>
    <string name="register">Register</string>
    <string name="openingkms">Enter opening kms.</string>
    <string name="closingkms">Enter closing kms.</string>
    <string name="start_engine">Start Engine Hrs.</string>
    <string name="close_engine">Close Engine Hrs.</string>
    <string name="forwardengine">Enter Forward Engine Hrs.</string>
    <string name="reverseengine">Enter Reverse Engine Hrs.</string>
    <string name="qty">Enter Quantity</string>
    <string name="man_pump">Enter Man/Pump</string>
    <string name="materials">Materials</string>
    <string name="supplier">Enter Supplier</string>
    <string name="enterDcNo">Enter Dc No</string>
    <string name="enterMaterialDateTime">Double tap to choose Date-time</string>
    <string name="vehicleNo">Enter Vehicle No</string>
    <string name="loadweight">Enter Load Weight</string>
    <string name="emptyweight">Enter Empty Weight</string>
    <string name="enterIntime">Double tap to choose Vehicle In Date-time</string>
    <string name="enterOuttime">Double tap to choose Vehicle Out Date-time</string>
    <string name="supplierName">Enter Supplier Name</string>
    
    <string name="vehicleNumber">Enter Vehicle Number</string>
       <string name="loadWeight">Enter Load Weight</string>
       <string name="emptyWeight">Enter Empty Weight</string>
       <string name="netWeight">Enter Net Weight</string>
       
     
    <string name="dieselissued">Enter Issued Diesel</string>
    <string name="quantityCarried">Quantity Carried </string>
    <string name="submit">Submit</string>
    <string name="nameofmaterials">Enter Name of Materials</string>
    <string name="quantity">Enter Material Quantity </string>
    <string name="plant">Enter Plant Name</string>
    <string name="trasporterName">Enter Trasporter Name</string>
    <string name="registerTruck">Register</string>
    <string name="typeofMaterials">Enter Material Type</string>
    <string name="no_registered_vehicle">No Vehicle is registered yet!!</string>
    <string name="no_store_data">Oops, Store is empty!!</string>
    <string name="storeRegister">No Vehicle is registered yet!!</string>
    <string name="make_new_entry">Done</string>
    <string name="button_checkout">CheckOut</string>
    <string name="button_checkin">CheckIn</string>
     
    <string name="storeRegistered">Update</string>
       <string name="storeHold">Hold</string>
       
    <string name="spinner_vehicle_state_title">Select Vehicle State</string>
    <string name="creation_date">Creation Date</string>
    <string name="no_records">Sorry, NO RECORDS FOUND!!</string>
    <string name="vehicle_delete_confirm">Confirm Delete...</string>
    <string name="vehicle_delete">Are you sure you want delete this Vehicle?</string>
    
  	<string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    
    <string-array name="custom__drawer_item">
        <item>Vehicles</item>
        <item>Store</item>
        <item>Vehicle Registration</item>
        <item>Store Inward</item>
    </string-array>

</resources>