<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/vehicle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/creation_date"
                android:textSize="20dp" />

            <View
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/datee_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vehicle_CheckOut_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/dc_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:hint="@string/enterDcNo"
                android:inputType="text" />

            <EditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:hint="@string/qty"
                android:inputType="text" />

            <EditText
                android:id="@+id/man_pump"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:hint="@string/man_pump"
                android:inputType="text" />

            <EditText
                android:id="@+id/diesel_issued"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:hint="@string/dieselissued"
                android:inputType="text" />

            <EditText
                android:id="@+id/openkms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:hint="@string/openingkms"
                android:inputType="text" />

            <EditText
                android:id="@+id/start_engine_hrs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:hint="@string/start_engine" />

            <EditText
                android:id="@+id/out_time_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:editable="false"
                android:gravity="center_horizontal"
                android:hint="@string/enterOuttime"
                android:inputType="none" />

            <Button
                android:id="@+id/manage_vehicle_checkOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.50"
                android:gravity="center_horizontal"
                android:text="@string/button_checkout"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vehicle_CheckIn_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/closingkms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:hint="@string/closingkms"
                android:inputType="text" />

            <EditText
                android:id="@+id/closing_engine_hrs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:hint="@string/close_engine" />

            <EditText
                android:id="@+id/fow_hrs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:hint="@string/forwardengine"
                android:inputType="text" />

            <EditText
                android:id="@+id/rev_hrs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:hint="@string/reverseengine"
                android:inputType="text" />

            <EditText
                android:id="@+id/in_time_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:editable="false"
                android:gravity="center_horizontal"
                android:hint="@string/enterIntime"
                android:inputType="none" />

            <Button
                android:id="@+id/manage_vehicle_checkIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.50"
                android:gravity="center_horizontal"
                android:text="@string/button_checkin"
                android:textSize="20dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>