<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical" >
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/creation_date"
                android:textSize="20dp" />

            <View
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/store_datee_created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:textSize="20dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/typeofmateials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/typeofMaterials"
            android:inputType="text" />

        <EditText
            android:id="@+id/supplierName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/supplierName"
            android:inputType="text" />

        <EditText
            android:id="@+id/vehicleNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/vehicleNumber"
            android:inputType="text" />

        <EditText
            android:id="@+id/loadWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/loadWeight"
            android:inputType="text" />

        <Button
            android:id="@+id/button_store_register_hold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.50"
            android:textSize="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/storeHold" />

        <EditText
            android:id="@+id/emptyWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/emptyWeight"
            android:inputType="text" />

        <EditText
            android:id="@+id/netWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/netWeight"
            android:inputType="text" />

        <Button
            android:id="@+id/button_store_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.50"
            android:textSize="20dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/storeRegistered" />
    </LinearLayout>

</ScrollView>